제로베이스 강의

--- a/파이썬_기초.ipynb
+++ b/파이썬_기초.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHe358WB8MTKat5njFcTcL",
+      "authorship_tag": "ABX9TyMV0K/O/BvMJC0PGmH4WvX4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1287,26 +1287,18 @@
     {
       "cell_type": "code",
       "source": [
-        "for i in range(1,6):\n",
-        "  for j in range(6,i,-1):\n",
-        "    print(' ',end='')\n",
-        "  for k in range(i):\n",
-        "    print('*',end='')\n",
-        "  print()\n",
-        "\n",
-        "for i in range(1,6):\n",
-        "  for j in range(i,6):\n",
-        "    print(' ',end='')\n",
-        "  for k in range(i):\n",
-        "    print('*',end='')\n",
-        "  print()"
+        "# Q1                                                                            # 강의 코드\n",
+        "for i in range(1,6):                                                            # for i in range(1, 6):\n",
+        "  print('*'*i)                                                                  #     for j in range(i):\n",
+        "                                                                                #         print('*', end='')\n",
+        "                                                                                #     print()"
       ],
       "metadata": {
+        "id": "H_Bbmj0b3aIJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "620TtS7nzndS",
-        "outputId": "315f0b60-1998-43e4-e5e2-3c59ddf78dab"
+        "outputId": "e24320b2-f478-4783-c9b6-8f4df0c4dd33"
       },
       "execution_count": null,
       "outputs": [
@@ -1314,28 +1306,382 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "     *\n",
-            "    **\n",
-            "   ***\n",
-            "  ****\n",
-            " *****\n",
-            "     *\n",
-            "    **\n",
-            "   ***\n",
-            "  ****\n",
-            " *****\n"
+            "*\n",
+            "**\n",
+            "***\n",
+            "****\n",
+            "*****\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Q2                                                                            # 강의 코드\n",
+        "for i in range(1,6):                                                            # for i in range(1, 6):\n",
+        "  for j in range(5,i,-1):                                                       #   for j in range(6 - i - 1):\n",
+        "    print(' ',end='')                                                           #     print(' ', end='')\n",
+        "  print(i*'*')                                                                  #   for k in range(i):\n",
+        "                                                                                #     print('*', end='')\n",
+        "                                                                                #   print()"
+      ],
       "metadata": {
-        "id": "H_Bbmj0b3aIJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ttggK9hj49Rj",
+        "outputId": "27bff6e6-5cd1-4ef4-d859-acc9f557c455"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    *\n",
+            "   **\n",
+            "  ***\n",
+            " ****\n",
+            "*****\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Q3                                                                            # 강의 코드\n",
+        "for i in range(5,0,-1):                                                         # for i in range(5, 0, -1):\n",
+        "  print('*'*i)                                                                  #     for j in range(i):\n",
+        "                                                                                #         print('*', end='')\n",
+        "                                                                                #     print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x0x8d0jK8hLY",
+        "outputId": "3f9ab0c1-5a6d-4aff-b1ad-ba67a964869e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*****\n",
+            "****\n",
+            "***\n",
+            "**\n",
+            "*\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Q4                                                                            # 강의 코드\n",
+        "for i in range(5):                                                              # for i in range(5, 0, -1):\n",
+        "  for k in range(1,i+1):                                                        #     for j in range(5 - i):\n",
+        "    print(' ',end='')                                                           #        print(' ', end='')\n",
+        "  for j in range(5,i,-1):                                                       #     for j in range(i):\n",
+        "    print('*',end='')                                                           #        print('*', end='')\n",
+        "  print()                                                                       #     print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NmkWQPnwAKDy",
+        "outputId": "795e10bc-4084-4ba1-c593-dd345333fe2a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*****\n",
+            " ****\n",
+            "  ***\n",
+            "   **\n",
+            "    *\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Q5                                                                            # 강의 코드\n",
+        "for i in range(1,6):                                                            # for i in range(1, 10):\n",
+        "  print('*'*i)                                                                  #    if i < 5:\n",
+        "for i in range(4,0,-1):                                                         #       for j in range(i):\n",
+        "  print('*'*i)                                                                  #          print('*', end='')\n",
+        "                                                                                #    else:\n",
+        "                                                                                #       for j in range(10-i):\n",
+        "                                                                                #          print('*', end='')\n",
+        "                                                                                #    print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w8hHFuI9BXPr",
+        "outputId": "72533af9-a3d7-4f45-cca6-f20804966be8"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*\n",
+            "**\n",
+            "***\n",
+            "****\n",
+            "*****\n",
+            "****\n",
+            "***\n",
+            "**\n",
+            "*\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Q6                                                                            # 강의 코드\n",
+        "for i in range(1,6):                                                            # for i in range(1, 6):\n",
+        "  for j in range(i-1):                                                          #     for j in range(1, 6):\n",
+        "    print(' ',end='')                                                           #         if j == i:\n",
+        "  for k in range(1):                                                            #             print('*', end='')\n",
+        "    print('*',end='')                                                           #         else:\n",
+        "  print()                                                                       #             print(' ', end='')\n",
+        "                                                                                #     print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k1ybrzhQKVvX",
+        "outputId": "c841d99a-0128-407d-aceb-806ec4a47f8d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*\n",
+            " *\n",
+            "  *\n",
+            "   *\n",
+            "    *\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Q7                                                                            # 강의 코드\n",
+        "for i in range(4, -1, -1):                                                      # for i in range(5, 0, -1):\n",
+        "  for j in range(i):                                                            #     for j in range(1, 6):\n",
+        "    print(' ',end='')                                                           #         if j == i:\n",
+        "  print('*')                                                                    #             print('*', end='')\n",
+        "                                                                                #         else:\n",
+        "                                                                                #             print(' ', end='')\n",
+        "                                                                                #     print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mI0vuf0MMY5u",
+        "outputId": "c2d94375-2481-4c31-90f0-c57912d3ee31"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    *\n",
+            "   *\n",
+            "  *\n",
+            " *\n",
+            "*\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Q8\n",
+        "for i in range(1,6):\n",
+        "  for j in range(5,i,-1):\n",
+        "    print(' ',end='')\n",
+        "  for k in range(2*i-1):\n",
+        "    print('*',end='')\n",
+        "  print()\n",
+        "for i in range(1,6):\n",
+        "  for j in range(i-1):\n",
+        "    print(' ',end='')\n",
+        "  for k in range(10,2*i-1,-1):\n",
+        "    print('*',end='')\n",
+        "  print()\n",
+        "\n",
+        "# 다른 블로그\n",
+        "# for i in range(6):\n",
+        "#     print(' '*(5-i)+'*'*(2*i+1))\n",
+        "# for i in range(5,-1,-1):\n",
+        "#     print(' '*(5-i)+'*'*(2*i+1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h0qYdAqAI4XV",
+        "outputId": "c586fd61-2e8d-4782-9114-523332e8f5f9"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    *\n",
+            "   ***\n",
+            "  *****\n",
+            " *******\n",
+            "*********\n",
+            "*********\n",
+            " *******\n",
+            "  *****\n",
+            "   ***\n",
+            "    *\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bus_a = 15\n",
+        "bus_b = 13\n",
+        "bus_c = 8\n",
+        "\n",
+        "totalmin = 17*60                                                                # 버스A,B 운행시간 6:00~23:00(17시간)\n",
+        "\n",
+        "for i in range(totalmin+1):\n",
+        "    if i % (bus_a*bus_b) == 0:\n",
+        "        hour = 6 + (i // 60)\n",
+        "        min = i % 60\n",
+        "        print(f'busA와 busB 동시 정차!!\\t{hour}:{min}')\n",
+        "    if i >= 20 and i <= (totalmin-60):                                          # 버스C 운행시간 6:20~22:00\n",
+        "        if i % (bus_a*bus_b*bus_c) == 0:\n",
+        "          hour = 6 + (i // 60)\n",
+        "          min = i % 60\n",
+        "          print(f'busA와 busB, busC 동시 정차!!\\t{hour}:{min}')\n",
+        "        elif i % (bus_b*bus_c) == 0:\n",
+        "          hour = 6 + (i // 60)\n",
+        "          min = i % 60\n",
+        "          print(f'busB와 busC 동시 정차!!\\t{hour}:{min}')\n",
+        "        elif i % (bus_a*bus_c) == 0:\n",
+        "          hour = 6 + (i // 60)\n",
+        "          min = i % 60\n",
+        "          print(f'busA와 busC 동시 정차!!\\t{hour}:{min}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xCwiBnXDK7_k",
+        "outputId": "13ba0323-e888-4181-b860-6c5aa11136d6"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "busA와 busB 동시 정차!!\t6:0\n",
+            "busB와 busC 동시 정차!!\t7:44\n",
+            "busA와 busC 동시 정차!!\t8:0\n",
+            "busA와 busB 동시 정차!!\t9:15\n",
+            "busB와 busC 동시 정차!!\t9:28\n",
+            "busA와 busC 동시 정차!!\t10:0\n",
+            "busB와 busC 동시 정차!!\t11:12\n",
+            "busA와 busC 동시 정차!!\t12:0\n",
+            "busA와 busB 동시 정차!!\t12:30\n",
+            "busB와 busC 동시 정차!!\t12:56\n",
+            "busA와 busC 동시 정차!!\t14:0\n",
+            "busB와 busC 동시 정차!!\t14:40\n",
+            "busA와 busB 동시 정차!!\t15:45\n",
+            "busA와 busC 동시 정차!!\t16:0\n",
+            "busB와 busC 동시 정차!!\t16:24\n",
+            "busA와 busC 동시 정차!!\t18:0\n",
+            "busB와 busC 동시 정차!!\t18:8\n",
+            "busA와 busB 동시 정차!!\t19:0\n",
+            "busB와 busC 동시 정차!!\t19:52\n",
+            "busA와 busC 동시 정차!!\t20:0\n",
+            "busB와 busC 동시 정차!!\t21:36\n",
+            "busA와 busC 동시 정차!!\t22:0\n",
+            "busA와 busB 동시 정차!!\t22:15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gearA = int(input('GearA 톱니수 입력: '))\n",
+        "gearB = int(input('GearB 톱니수 입력: '))\n",
+        "circleA = 0\n",
+        "circleB = 0\n",
+        "leastNum = 0\n",
+        "flag = True\n",
+        "while flag:\n",
+        "  if circleA != 0:\n",
+        "    if circleA != leastNum:\n",
+        "      circleA += gearA\n",
+        "    else: flag = False\n",
+        "  else: circleA += gearA\n",
+        "\n",
+        "  if circleB != 0 and circleB % gearA == 0:\n",
+        "    leastNum = circleB\n",
+        "  else: circleB += gearB\n",
+        "\n",
+        "print('최초 만나는 톱니수(최소공배수): {}톱니'.format(leastNum))\n",
+        "print('gearA 회전수: {}회전'.format(int(leastNum/gearA)))\n",
+        "print('gearB 회전수: {}회전'.format(int(leastNum/gearB)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P0Ah_VSY3YqW",
+        "outputId": "ec90121e-cfa0-4a4b-a3ab-92a5a3e0187a"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "GearA 톱니수 입력: 8\n",
+            "GearB 톱니수 입력: 18\n",
+            "최초 만나는 톱니수(최소공배수): 72톱니\n",
+            "gearA 회전수: 9회전\n",
+            "gearB 회전수: 4회전\n"
+          ]
+        }
+      ]
     }
   ]
 }
