--- a/파이썬_기초.ipynb
+++ b/파이썬_기초.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMV0K/O/BvMJC0PGmH4WvX4",
+      "authorship_tag": "ABX9TyMsHbVrFinHDynMuKxezCcr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JoQri/python_study/blob/main/%ED%8C%8C%EC%9D%B4%EC%8D%AC_%EA%B8%B0%EC%B4%88.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/JoQri/zerobase_study/blob/main/%ED%8C%8C%EC%9D%B4%EC%8D%AC_%EA%B8%B0%EC%B4%88.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -355,7 +355,7 @@
         "  if i % 7 != 0 or i % 3 != 0:\n",
         "    continue\n",
         "  if n == 0:\n",
-        "    print(i)\n",
+        "    print(i)                                                                    # 최소공배수\n",
         "\n",
         "  n += 1"
       ],
@@ -1432,7 +1432,7 @@
         "id": "w8hHFuI9BXPr",
         "outputId": "72533af9-a3d7-4f45-cca6-f20804966be8"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1549,7 +1549,7 @@
         "id": "h0qYdAqAI4XV",
         "outputId": "c586fd61-2e8d-4782-9114-523332e8f5f9"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1604,7 +1604,80 @@
         "id": "xCwiBnXDK7_k",
         "outputId": "13ba0323-e888-4181-b860-6c5aa11136d6"
       },
-      "execution_count": 60,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "busA와 busB 동시 정차!!\t6:0\n",
+            "busB와 busC 동시 정차!!\t7:44\n",
+            "busA와 busC 동시 정차!!\t8:0\n",
+            "busA와 busB 동시 정차!!\t9:15\n",
+            "busB와 busC 동시 정차!!\t9:28\n",
+            "busA와 busC 동시 정차!!\t10:0\n",
+            "busB와 busC 동시 정차!!\t11:12\n",
+            "busA와 busC 동시 정차!!\t12:0\n",
+            "busA와 busB 동시 정차!!\t12:30\n",
+            "busB와 busC 동시 정차!!\t12:56\n",
+            "busA와 busC 동시 정차!!\t14:0\n",
+            "busB와 busC 동시 정차!!\t14:40\n",
+            "busA와 busB 동시 정차!!\t15:45\n",
+            "busA와 busC 동시 정차!!\t16:0\n",
+            "busB와 busC 동시 정차!!\t16:24\n",
+            "busA와 busC 동시 정차!!\t18:0\n",
+            "busB와 busC 동시 정차!!\t18:8\n",
+            "busA와 busB 동시 정차!!\t19:0\n",
+            "busB와 busC 동시 정차!!\t19:52\n",
+            "busA와 busC 동시 정차!!\t20:0\n",
+            "busB와 busC 동시 정차!!\t21:36\n",
+            "busA와 busC 동시 정차!!\t22:0\n",
+            "busA와 busB 동시 정차!!\t22:15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 강의자료\n",
+        "busA = 15\n",
+        "busB = 13\n",
+        "busC = 8\n",
+        "\n",
+        "totalMin = 17 * 60\n",
+        "for i in range(totalMin + 1):\n",
+        "    if i < 20 or i > (totalMin - 60):\n",
+        "        if i % busA == 0 and i % busB == 0:\n",
+        "            print('busA와 busB 동시 정차!!', end='')\n",
+        "            hour = 6 + i // 60\n",
+        "            min = i % 60\n",
+        "            print('\\t{}:{}'.format(hour, min))\n",
+        "    else:\n",
+        "        if i % busA == 0 and i % busB == 0:\n",
+        "            print('busA와 busB 동시 정차!!', end='')\n",
+        "            hour = 6 + i // 60\n",
+        "            min = i % 60\n",
+        "            print('\\t{}:{}'.format(hour, min))\n",
+        "        elif i % busA == 0 and i % busC == 0:\n",
+        "            print('busA와 busC 동시 정차!!', end='')\n",
+        "            hour = 6 + i // 60\n",
+        "            min = i % 60\n",
+        "            print('\\t{}:{}'.format(hour, min))\n",
+        "        elif i % busB == 0 and i % busC == 0:\n",
+        "            print('busB와 busC 동시 정차!!', end='')\n",
+        "            hour = 6 + i // 60\n",
+        "            min = i % 60\n",
+        "            print('\\t{}:{}'.format(hour, min))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9iIzDO7oOpXk",
+        "outputId": "8de3f01e-98b8-4d27-bcc2-fdb15a0f3716"
+      },
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -1668,7 +1741,7 @@
         "id": "P0Ah_VSY3YqW",
         "outputId": "ec90121e-cfa0-4a4b-a3ab-92a5a3e0187a"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
